docs: Adicionar links de navegação entre todos os documentos
- Adiciona seção de links em README.md
- Adiciona navegação em QUICK-START.md
- Adiciona navegação em GUIA-COMPLETO-FINAL.md
- Adiciona navegação em CONFIGURAR-SUPABASE.md
- Adiciona navegação em DEPLOY.md
- Adiciona navegação em PROJETO-FINALIZADO.md
- Adiciona navegação em SHOWCASE-VISUAL.md
- Adiciona seção de documentação em index.html
- Melhora navegabilidade entre guias

--- a/newdri-clinic/index.html
+++ b/newdri-clinic/index.html
@@ -100,6 +100,34 @@
                     <strong>Newdri Clinic</strong> - São Lourenço/MG
                 </p>
             </div>
+
+            <!-- Seção de Documentação -->
+            <div class="card" style="margin-top: 40px; background: linear-gradient(135deg, #e0f7fa 0%, #b2ebf2 100%);">
+                <h3 style="text-align: center; margin-top: 0;">📚 Documentação Completa</h3>
+                <p style="text-align: center; margin-bottom: 20px;">
+                    Acesse os guias completos para configuração e uso do sistema:
+                </p>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px;">
+                    <a href="QUICK-START.md" target="_blank" class="btn" style="background: linear-gradient(135deg, #667eea, #764ba2); color: white; text-decoration: none;">
+                        ⚡ Quick Start (15 min)
+                    </a>
+                    <a href="GUIA-COMPLETO-FINAL.md" target="_blank" class="btn" style="background: linear-gradient(135deg, #f093fb, #f5576c); color: white; text-decoration: none;">
+                        📖 Guia Completo
+                    </a>
+                    <a href="CONFIGURAR-SUPABASE.md" target="_blank" class="btn" style="background: linear-gradient(135deg, #4facfe, #00f2fe); color: white; text-decoration: none;">
+                        🔧 Setup Supabase
+                    </a>
+                    <a href="DEPLOY.md" target="_blank" class="btn" style="background: linear-gradient(135deg, #43e97b, #38f9d7); color: white; text-decoration: none;">
+                        🚀 Deploy
+                    </a>
+                    <a href="SHOWCASE-VISUAL.md" target="_blank" class="btn" style="background: linear-gradient(135deg, #fa709a, #fee140); color: white; text-decoration: none;">
+                        🎨 Showcase Visual
+                    </a>
+                    <a href="README.md" target="_blank" class="btn" style="background: linear-gradient(135deg, #a8edea, #fed6e3); color: #333; text-decoration: none;">
+                        📋 README
+                    </a>
+                </div>
+            </div>
         </main>
 
         <footer>
