feat: adiciona link para O Guardião do Sono na página principal
- Adiciona botão terciário na página inicial
- Facilita acesso ao jogo terapêutico de relaxamento
- Estilo visual harmonizado com tema da clínica

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                     <a href="admin.html" class="btn btn-secondary">
                         Acesso Profissional
                     </a>
+                    <a href="guardiao-do-sono/" class="btn btn-tertiary">
+                        🌙 O Guardião do Sono (Relaxamento)
+                    </a>
                 </div>
             </div>
 
