--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -25,6 +25,29 @@
                 </ul>
             </div>
 
+            <!-- Seletor de voz -->
+            <div class="voice-selector">
+                <h3>🎤 Qualidade da Voz:</h3>
+                <div class="voice-options">
+                    <button class="voice-option active" data-voice="webspeech">
+                        <span class="option-icon">🔊</span>
+                        <span class="option-name">Voz Sintética</span>
+                        <span class="option-desc">Grátis • Offline</span>
+                    </button>
+                    <button class="voice-option" data-voice="google">
+                        <span class="option-icon">🌐</span>
+                        <span class="option-name">Google TTS</span>
+                        <span class="option-desc">Natural • Requer API</span>
+                    </button>
+                    <button class="voice-option" data-voice="elevenlabs">
+                        <span class="option-icon">✨</span>
+                        <span class="option-name">ElevenLabs</span>
+                        <span class="option-desc">Ultra Realista • Requer API</span>
+                    </button>
+                </div>
+                <button id="config-api-button" class="small-button">⚙️ Configurar APIs</button>
+            </div>
+
             <button id="start-button" class="glow-button">
                 Iniciar Jornada
             </button>
@@ -69,10 +92,47 @@
         </div>
     </div>
 
+    <!-- Tela de configuração de API -->
+    <div id="api-config-screen" class="screen">
+        <div class="api-config-content">
+            <h2>⚙️ Configuração de APIs de Voz</h2>
+            <p class="api-subtitle">Para usar vozes premium, você precisa de API keys gratuitas ou pagas.</p>
+            
+            <div class="api-section">
+                <h3>🌐 Google Cloud Text-to-Speech</h3>
+                <p>Vozes naturais do Google. <a href="https://cloud.google.com/text-to-speech" target="_blank">Obter API Key</a></p>
+                <input type="text" id="google-api-key" placeholder="Cole sua API key aqui" class="api-input">
+                <p class="api-note">💰 Grátis até 4 milhões de caracteres/mês</p>
+            </div>
+
+            <div class="api-section">
+                <h3>✨ ElevenLabs</h3>
+                <p>Vozes ultra-realistas com IA. <a href="https://elevenlabs.io" target="_blank">Obter API Key</a></p>
+                <input type="text" id="elevenlabs-api-key" placeholder="Cole sua API key aqui" class="api-input">
+                <p class="api-note">💰 10.000 caracteres grátis/mês (conta gratuita)</p>
+            </div>
+
+            <div class="api-buttons">
+                <button id="save-api-keys" class="glow-button">Salvar Configurações</button>
+                <button id="close-api-config" class="secondary-button">Voltar</button>
+            </div>
+
+            <div class="api-help">
+                <h4>❓ Como obter API keys:</h4>
+                <ol>
+                    <li><strong>Google TTS:</strong> Crie conta no Google Cloud → Ative Text-to-Speech API → Copie a key</li>
+                    <li><strong>ElevenLabs:</strong> Crie conta gratuita → Vá em Profile → Copie a API key</li>
+                </ol>
+                <p class="api-privacy">🔒 Suas keys são salvas apenas no seu navegador (localStorage)</p>
+            </div>
+        </div>
+    </div>
+
     <!-- Three.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     
     <!-- Scripts do jogo -->
+    <script src="js/voice-system.js"></script>
     <script src="js/audio-system.js"></script>
     <script src="js/binaural-beats.js"></script>
     <script src="js/phase-transition.js"></script>
@@ -80,5 +140,6 @@
     <script src="js/phase-2-underwater.js"></script>
     <script src="js/phase-3-guardian.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/voice-ui.js"></script>
 </body>
 </html>
