fix: melhora drasticamente seleção e qualidade de voz
- Adiciona logs detalhados de debug para identificar problemas
- Melhora algoritmo de seleção de melhor voz PT-BR
- Prioriza vozes Google, Microsoft, Apple corretamente
- Adiciona botão 'Testar Voz Atual' na tela inicial
- Aumenta timeout de carregamento de vozes para 5 segundos
- Adiciona verificação mais robusta de vozes disponíveis
- Lista todas as vozes PT-BR carregadas no console
- Melhora feedback visual durante teste de voz
- Corrige configurações de rate, pitch e volume
- Adiciona mais logs para facilitar troubleshooting

--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -45,7 +45,10 @@
                         <span class="option-desc">Ultra Realista • Requer API</span>
                     </button>
                 </div>
-                <button id="config-api-button" class="small-button">⚙️ Configurar APIs</button>
+                <div class="voice-buttons">
+                    <button id="test-voice-button" class="small-button test-button">🎵 Testar Voz Atual</button>
+                    <button id="config-api-button" class="small-button">⚙️ Configurar APIs</button>
+                </div>
             </div>
 
             <button id="start-button" class="glow-button">
