fix: adiciona sistema completo de debug de áudio
LOGS DETALHADOS:
- ElevenLabs: logs de cada etapa da requisição
- Binaural Beats: estado do AudioContext e frequências
- playAudioBlob: eventos de carregamento e reprodução
- Mensagens de erro detalhadas com códigos

BOTÃO DE TESTE:
- Novo botão '🔊 Testar Som Completo' na tela inicial
- Testa binaural beats + narração simultaneamente
- Mostra resultado em alert + console
- Identifica exatamente onde está o problema

MELHORIAS:
- Logs coloridos para fácil identificação
- Verifica estado do AudioContext
- Mostra tamanho do blob recebido
- Rastreia todos os eventos de áudio
- Fallback automático para Web Speech se API falhar

--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -54,6 +54,10 @@
             <button id="start-button" class="glow-button">
                 Iniciar Jornada
             </button>
+            
+            <button id="test-audio-button" class="test-audio-button">
+                🔊 Testar Som Completo (Debug)
+            </button>
 
             <p class="disclaimer">
                 ⚠️ Este jogo é um complemento relaxante e não substitui tratamento médico ou terapêutico.
