--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -113,10 +113,25 @@
             </div>
 
             <div class="api-section">
-                <h3>✨ ElevenLabs</h3>
+                <h3>✨ ElevenLabs (Português do Brasil)</h3>
                 <p>Vozes ultra-realistas com IA. <a href="https://elevenlabs.io" target="_blank">Obter API Key</a></p>
                 <input type="text" id="elevenlabs-api-key" placeholder="Cole sua API key aqui" class="api-input">
                 <p class="api-note">💰 10.000 caracteres grátis/mês (conta gratuita)</p>
+                
+                <div class="voice-info">
+                    <p><strong>🇧🇷 Voz Padrão:</strong> <em>Lotte</em> - Feminina, suave e terapêutica</p>
+                    <details style="margin-top: 8px;">
+                        <summary style="cursor: pointer; color: #64b5f6;">Ver outras vozes brasileiras disponíveis</summary>
+                        <ul style="margin-top: 8px; font-size: 0.9em; color: #aaa;">
+                            <li>🎤 <strong>Valentina</strong> - Feminina, jovem, energética</li>
+                            <li>🎤 <strong>Giovanni</strong> - Masculino, profundo, autoritário</li>
+                            <li>🎤 <strong>Marcus</strong> - Masculino, maduro, confiante</li>
+                        </ul>
+                        <p style="margin-top: 8px; font-size: 0.85em; color: #888;">
+                            Para trocar a voz, edite o arquivo <code>js/voice-system.js</code> (linha 27)
+                        </p>
+                    </details>
+                </div>
             </div>
 
             <div class="api-buttons">
