fix: Bloquear vozes de Portugal e forçar PT-BR
PROBLEMA: Sistema estava selecionando vozes pt-PT (Portugal)
SOLUÇÃO:
- Adicionado filtro de bloqueio para vozes de Portugal
- Lista negra: pt-PT, Cristiano, Amália, Portugal
- Fallback agora busca explicitamente pt-BR
- Adicionado botão 'Listar Todas as Vozes' para debug
- Logs detalhados para identificar qual voz foi selecionada
- Console agora mostra bandeira 🇧🇷/🇵🇹 para cada voz

--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -58,6 +58,10 @@
             <button id="test-audio-button" class="test-audio-button">
                 🔊 Testar Som Completo (Debug)
             </button>
+            
+            <button id="list-voices-button" class="test-audio-button" style="background: #1976d2;">
+                🎤 Listar Todas as Vozes (Debug)
+            </button>
 
             <p class="disclaimer">
                 ⚠️ Este jogo é um complemento relaxante e não substitui tratamento médico ou terapêutico.
