debug: Adicionar logs detalhados e status visual de voz
MELHORIAS:
- Logs visuais em formato de caixa para identificar modo ativo
- Status visual mostrando 'ElevenLabs Ativo' na tela
- Forçar seleção de ElevenLabs na primeira inicialização
- Verificação explícita de API key ao inicializar
- Mensagens claras: '➡️ Usando ElevenLabs (voz ultra-realista)'

Agora é impossível não saber qual voz está sendo usada!

--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -54,6 +54,16 @@
                 </p>
             </div>
 
+            <div id="voice-status" style="margin: 15px 0; padding: 12px; background: rgba(76, 175, 80, 0.2); border-radius: 8px; border-left: 4px solid #4caf50;">
+                <div style="display: flex; align-items: center; gap: 10px;">
+                    <span style="font-size: 24px;">✨</span>
+                    <div>
+                        <div style="font-weight: bold; color: #4caf50;">ElevenLabs Ativo</div>
+                        <div style="font-size: 0.85em; color: #aaa;">Voz Lotte (PT-BR) • Ultra-realista</div>
+                    </div>
+                </div>
+            </div>
+
             <button id="start-button" class="glow-button">
                 Iniciar Jornada
             </button>
