feat: Botão para baixar áudio puro do ElevenLabs
TESTE DEFINITIVO:
- Novo botão rosa: 'Baixar Áudio ElevenLabs (Teste Puro)'
- Gera áudio diretamente no ElevenLabs
- Baixa arquivo MP3 para o dispositivo
- Usuário pode ouvir no player de música nativo
- Elimina variável do navegador da equação

Se o MP3 baixado estiver NATURAL:
→ Problema é no navegador (não no ElevenLabs)
→ Precisamos usar solução alternativa

Se o MP3 baixado estiver ROBÓTICO:
→ Problema é na geração do ElevenLabs
→ Precisamos investigar configuração

--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -75,6 +75,10 @@
             <button id="list-voices-button" class="test-audio-button" style="background: #1976d2;">
                 🎤 Listar Todas as Vozes (Debug)
             </button>
+            
+            <button id="download-test-button" class="test-audio-button" style="background: #e91e63;">
+                💾 Baixar Áudio ElevenLabs (Teste Puro)
+            </button>
 
             <p class="disclaimer">
                 ⚠️ Este jogo é um complemento relaxante e não substitui tratamento médico ou terapêutico.
