✨ feat: adiciona card de novidades na tela inicial + roteiro de narrações
CARD DE NOVIDADES:
- ✨ Badge 'NOVO' animado com glow
- 🌱 Destaque para Incubador de Sonhos
- 💎 Grid com 4 highlights (NLP, 3D, Histórico, Cristais)
- 📱 Layout responsivo para mobile
- ℹ️ Instrução de acesso pelo painel lateral

ROTEIRO DE NARRAÇÕES EXTRAS:
📁 Criado ROTEIRO-NARRACOES-EXTRAS.md com 7 narrações:

1. Introdução ao Incubador (45s)
2. Gratidão e Despedida (60s)
3. Âncora de Retorno (40s)
4. Visualização Guiada - Jardim dos Sonhos (90s)
5. Liberação de Pensamentos (50s)
6. Afirmação Positiva (35s)
7. Contagem Regressiva Profunda (75s) ⭐ PRIORIDADE

INSTRUÇÕES DE GRAVAÇÃO:
🎤 Tom hipnótico e LENTO (50% mais devagar)
⏸️ Pausas de 2-3s entre frases (marcadas com ...)
😌 Ambiente silencioso, microfone 15-20cm
🎵 Formato MP3, 128kbps+
📝 Arquivos nomeados (ex: incubador_intro.mp3)

PRÓXIMOS PASSOS:
- Usuário grava e envia os MP3s
- Integro no sistema como 'Narrações Premium'
- Desbloqueia com cristais no painel
- Sistema de shuffle aleatório

--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -33,6 +33,24 @@
                 </ul>
             </div>
 
+            <!-- 🌟 NOVIDADES -->
+            <div class="feature-card">
+                <div class="feature-badge">✨ NOVO</div>
+                <h3 style="color: #f093fb; margin-bottom: 10px; font-size: 1.3rem;">🌱 Incubador de Sonhos</h3>
+                <p style="opacity: 0.9; line-height: 1.5; margin-bottom: 15px;">
+                    Plante uma intenção antes de dormir. Sua mente subconsciente trabalhará nela enquanto você descansa.
+                </p>
+                <div class="feature-highlights">
+                    <div class="highlight-item">💭 Ancoragem NLP</div>
+                    <div class="highlight-item">🎨 Visualização 3D</div>
+                    <div class="highlight-item">📖 Histórico de sonhos</div>
+                    <div class="highlight-item">💎 +3 Cristais bônus</div>
+                </div>
+                <p style="font-size: 0.85rem; opacity: 0.7; margin-top: 12px;">
+                    ℹ️ Acesse pelo painel lateral durante o jogo
+                </p>
+            </div>
+
             <!-- Status de Voz -->
             <div id="voice-status" style="margin: 20px 0; padding: 16px; background: rgba(76, 175, 80, 0.2); border-radius: 12px; border-left: 4px solid #4caf50;">
                 <div style="display: flex; align-items: center; gap: 12px;">
