--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -15,6 +15,7 @@
     
     <title>O Guardião do Sono - Experiência Terapêutica 3D</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/user-management.css">
 </head>
 <body>
     <!-- Tela de boas-vindas -->
@@ -243,6 +244,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     
     <!-- Scripts do jogo -->
+    <script src="js/user-management.js"></script>
     <script src="js/wake-lock.js"></script>
     <script src="js/voice-system.js"></script>
     <script src="js/audio-system.js"></script>
