feat: Implement session tracking and edit user functionality
✨ New Features:
- Session tracking system that automatically records:
  - Login date and time
  - Session duration (time spent in system)
  - Phases completed during session
  - XP and crystals gained
  - Dream Incubator usage
- Complete Edit User functionality with modal form
- Session history display in user cards (last 5 sessions)
- Session statistics: total sessions, total time, average time, phases completed

📊 Session Tracking:
- Created SessionTracker class (js/session-tracker.js)
- Integrated into main.js and user-management.js
- Automatic session start on login
- Automatic session end on logout
- Permanent storage in localStorage (user_{userId}_sessions_history)
- User object updated with session count and last session date

✏️ Edit User:
- Full modal form with all user fields (nome, sobrenome, data nascimento, whatsapp, email, cidade, estado, queixa principal)
- Pre-populated with existing data
- Validation and save to localStorage
- Beautiful styled modal with glassmorphism effect

📈 Session Statistics Display:
- Stats grid showing: Total Sessions, Total Time, Average Time, Phases Completed
- Expandable session history table
- Date/time formatting in Portuguese (pt-BR)
- Duration formatting (hours, minutes, seconds)

🎨 Styling:
- Added CSS for edit modal
- Added CSS for session stats grid
- Added CSS for session history table
- Responsive design for mobile devices

🔧 Technical:
- Helper functions: getUserSessionStats(), getSessionHistoryHTML(), formatDuration(), formatDateTime()
- Event listeners for toggle history buttons
- Integrated SessionTracker into main game initialization
- Data persistence across sessions

--- a/guardiao-do-sono/index.html
+++ b/guardiao-do-sono/index.html
@@ -245,6 +245,7 @@
     
     <!-- Scripts do jogo -->
     <script src="js/user-management.js"></script>
+    <script src="js/session-tracker.js"></script>
     <script src="js/wake-lock.js"></script>
     <script src="js/voice-system.js"></script>
     <script src="js/audio-system.js"></script>
